trunk/Archive2/95/080aac4817a0af/output
main.cpp: In function 'int main()':
main.cpp:88:12: error: no suitable 'operator delete' for 'Packet'
     delete packet;
            ^
